# cosmic-battery-applet

./: Cargo.toml  README.md  cosmic-battery-applet.desktop
src/: main.rs
